// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for peers component should render Peers with loading... when peers state is empty 1`] = `
<Styled(span)
  grey={true}
  small={true}
>
  Loading...
</Styled(span)>
`;

exports[`tests for peers component should render Peers with peers state data correctly 1`] = `
<Styled(span)
  grey={true}
  small={true}
>
  peers1, peers2, peers3, peers4
</Styled(span)>
`;
